--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -22,7 +22,7 @@
     <div class="buttonDiv">
 
       <div align="center"><a class="button" href="http://localhost:3000/">Back to Portfolio</a></div>
-      <div align="center" id="currentButton"><a class="button" href="http://localhost:5000/">Current Location</a></div>
+      <div align="center" id="currentButton"><a class="button" href="https://weather-app-three.herokuapp.com/">Current Location</a></div>
     </div>
   </div>
 </main>
