--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <script src="../index.js"></script>
-    <link rel="stylesheet" href="../style.css">
-    
+  <script src="../index.js"></script>
+  <link rel="stylesheet" href="../style.css">
+
   <title>Weather App</title>
 </head>
-<body onload="getLocation()">
+
+<body>
   {{{body}}}
 </body>
+
 </html>
