--- a/views/style.css
+++ b/views/style.css
@@ -95,6 +95,7 @@ main {
 }
 
 .button {
+	cursor: pointer;
 	border: none;
 	background: transparent;
 	color: #ffffff !important;
@@ -133,4 +134,7 @@ main {
 	font-size: 24px;
 	font-weight: 500;
 	text-shadow: 0px 4px rgba(0, 0, 0, 0.4);
+}
+a {
+	text-decoration: none;
 }
