--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -21,7 +21,7 @@
 
     <div class="buttonDiv">
 
-      <div align="center"><a class="button" href="http://localhost:3000/">Back to Portfolio</a></div>
+      <div align="center"><a class="button" href="https://genaaiv.dev/#/projects">Back to Portfolio</a></div>
       <div align="center" class="button" id="currentButton">Get Current Location</div>
     </div>
   </div>
